@@ -21,6 +21,8 @@ opsi-script (4.12.4.35) stable; urgency=low
   * oswebservice: sendlog: fix boolean values for append at log_write
   * osfunclin: getProfilesDirListLin fix non standard lines from getent passwd
   * osparser: executewith: powershell: remove a trailing '-file' from programparas
+  * osGUIcontrol: skindirectoryDevelopment = '../../../skin';
+  * osGUIcontrol: Linux: skindirectoryCompatibility = '/opt/opsi-script/skin';
 
 -- d.oertel <d.oertel@uib.de> Tue, 04 Jan 2022 15:00
 
